<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.OnboardFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/discover_the_joy_of_shopping_with_eway"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_effortlessly_with_our_app_where_exclusive_deals_and_a_seamless_experience_are_just_a_tap_away"
        android:textSize="@dimen/_11ssp"
        android:layout_below="@id/textView"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_18sdp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        app:lottie_autoPlay="true"
        android:layout_centerInParent="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/onboard_anim" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        app:cornerRadius="@dimen/_5sdp"
        android:text="@string/continue_txt"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:elegantTextHeight="true"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        app:rippleColor="@color/white"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginVertical="@dimen/_30sdp"/>


</RelativeLayout>