<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:contentDescription="@string/app_name"
    android:background="@color/white"
    tools:context=".fragments.PhoneNoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/_60sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:gravity="center"
            android:layout_marginTop="@dimen/_14sdp"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number."
            android:gravity="center"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:textSize="@dimen/_12ssp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/enter_mobile_number"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_textSize="@dimen/_12ssp"
                    app:ccp_autoFormatNumber="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phoneNoEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_num_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:gravity="start"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/ccp"
                    app:layout_constraintStart_toEndOf="@+id/ccp"
                    app:layout_constraintTop_toTopOf="@+id/ccp" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/view_color"
                    app:layout_constraintEnd_toEndOf="@+id/phoneNoEt"
                    app:layout_constraintStart_toEndOf="@+id/ccp"
                    app:layout_constraintTop_toBottomOf="@+id/phoneNoEt" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGetOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:text="@string/get_otp"
                android:layout_marginTop="@dimen/_25sdp"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:enabled="false"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/black"
                android:gravity="center"
                android:alpha="0.4"
                android:elegantTextHeight="true"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cornerRadius="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_11ssp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:progressTint="@color/yellow"
                android:layout_marginTop="@dimen/_8sdp"/>

        </FrameLayout>



    </LinearLayout>
</ScrollView>